fixing the issue with pre-builtin tools appearing on the search page

--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -50,14 +50,13 @@
               </div>
             </div>
             <div class="suggestion-wrap">
+              {% for tool in builtin_tools %}
               <label class="suggestion-item">
-                <input type="checkbox" name="source" value="calculator">
-                <span>AP News</span>
+                <input type="checkbox" name="source" value="{{ tool.name }}">
+                <span>{{ tool.display_name }}</span>
               </label>
-              <label class="suggestion-item">
-                <input type="checkbox" name="source" value="wikipedia">
-                <span>CNN</span>
-              </label>
+              {% endfor %}
+              
               {% if user_tools %}
                 {% for tool in user_tools %}
                 <label class="suggestion-item">
