--- a/django/user_info/static/css/api-integration.css
+++ b/django/user_info/static/css/api-integration.css
@@ -10,7 +10,7 @@
   height: 50px;
   border: 5px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  border-top-color: #007bff;
+  border-top-color: #F4C20D;
   animation: spin 1s ease-in-out infinite;
   margin-top: 10px;
 }
