adding history page

--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="{% static 'css/api-integration.css' %}">
     <link rel="stylesheet" href="{% static 'css/hamburger-menu.css' %}">
     <link rel="stylesheet" href="{% static 'css/search-results.css' %}">
+    <style>
+      .nav-links {
+        display: flex;
+        margin-bottom: 20px;
+      }
+      .nav-link {
+        color: white;
+        text-decoration: none;
+        margin-right: 20px;
+        transition: color 0.3s ease;
+      }
+      .nav-link:hover {
+        color: #4da6ff;
+      }
+      .nav-link span {
+        border-bottom: 2px solid transparent;
+        padding-bottom: 5px;
+      }
+      .nav-link.active span {
+        border-bottom: 2px solid white;
+      }
+    </style>
   </head>
   <body>
     <div class="s006">
@@ -30,6 +52,8 @@
         </div>
       </div>
       <div class="menu-items">
+        <a href="{% url 'search' %}">Search</a>
+        <a href="{% url 'history' %}">History</a>
         <a href="{% url 'tool_list' %}">Tools</a>
         <a href="{% url 'apikey_list' %}">API Keys</a>
         <a href="{% url 'logout' %}">Logout</a>
