--- a/django/user_info/templates/user_info/apikey_list.html
+++ b/django/user_info/templates/user_info/apikey_list.html
@@ -132,6 +132,7 @@
         </div>
         <div class="menu-items">
             <a href="{% url 'search' %}">Search</a>
+            <a href="{% url 'history' %}">History</a>
             <a href="{% url 'tool_list' %}">Tools</a>
             <a href="{% url 'apikey_list' %}">API Keys</a>
             <a href="{% url 'logout' %}">Logout</a>
@@ -143,6 +144,9 @@
             <div class="nav-links">
                 <a href="{% url 'search' %}" class="nav-link">
                     <span>Search</span>
+                </a>
+                <a href="{% url 'history' %}" class="nav-link">
+                    <span>History</span>
                 </a>
                 <a href="{% url 'tool_list' %}" class="nav-link">
                     <span>Tools</span>
