--- a/django/user_info/templates/user_info/apikey_confirm_delete.html
+++ b/django/user_info/templates/user_info/apikey_confirm_delete.html
@@ -94,6 +94,7 @@
         <div class="menu-items">
             <a href="{% url 'apikey_list' %}">Back to API Keys</a>
             <a href="{% url 'search' %}">Search</a>
+            <a href="{% url 'history' %}">History</a>
             <a href="{% url 'tool_list' %}">My Tools</a>
             <a href="{% url 'logout' %}">Logout</a>
             <button class="menu-close-btn">Close Menu</button>
@@ -104,6 +105,9 @@
             <div class="nav-links">
                 <a href="{% url 'search' %}" class="nav-link">
                     <span>Search</span>
+                </a>
+                <a href="{% url 'history' %}" class="nav-link">
+                    <span>History</span>
                 </a>
                 <a href="{% url 'tool_list' %}" class="nav-link">
                     <span>My Tools</span>
