--- a/django/user_info/templates/user_info/tool_form.html
+++ b/django/user_info/templates/user_info/tool_form.html
@@ -121,6 +121,7 @@
         <div class="menu-items">
             <a href="{% url 'tool_list' %}">Back to Tools</a>
             <a href="{% url 'search' %}">Search</a>
+            <a href="{% url 'history' %}">History</a>
             <a href="{% url 'apikey_list' %}">API Keys</a>
             <a href="{% url 'logout' %}">Logout</a>
             <button class="menu-close-btn">Close</button>
@@ -131,6 +132,9 @@
             <div class="nav-links">
                 <a href="{% url 'search' %}" class="nav-link">
                     <span>Search</span>
+                </a>
+                <a href="{% url 'history' %}" class="nav-link">
+                    <span>History</span>
                 </a>
                 <a href="{% url 'tool_list' %}" class="nav-link active">
                     <span>My Tools</span>
