cleaning up html files and moving css and js to their own files

--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -11,28 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/api-integration.css' %}">
     <link rel="stylesheet" href="{% static 'css/hamburger-menu.css' %}">
     <link rel="stylesheet" href="{% static 'css/search-results.css' %}">
-    <style>
-      .nav-links {
-        display: flex;
-        margin-bottom: 20px;
-      }
-      .nav-link {
-        color: white;
-        text-decoration: none;
-        margin-right: 20px;
-        transition: color 0.3s ease;
-      }
-      .nav-link:hover {
-        color: #4da6ff;
-      }
-      .nav-link span {
-        border-bottom: 2px solid transparent;
-        padding-bottom: 5px;
-      }
-      .nav-link.active span {
-        border-bottom: 2px solid white;
-      }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/history.css' %}">
   </head>
   <body>
     <div class="s006">
